<resources>
    <string name="app_name">Design</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="order">Order</string>
    <string name="profile1">Profile</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="username">Username</string>
    <string name="justin_martin">Justin Martin</string>
    <string name="password">Password</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password2">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_91_9999988888">+91 9999988888</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="a_201_paradise_heights">A-201, Paradise Heights</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="gandhi_road_maland">Gandhi Road, Maland</string>
    <string name="city">City</string>
    <string name="rajkot">Rajkot</string>
    <string name="pincode">Pincode</string>
    <string name="_400023">400023</string>
    <string name="state">State</string>
    <string name="gujarat">Gujarat</string>
    <string name="edit_details">Edit Details</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="contact_us">Contact Us</string>
    <string name="in_case_of_any_difficulty_or_queries_please_contact_us_on_the_details_below">In case of any difficulty or queries \n please contact us on the details below :</string>
    <string name="feedback1">Feedback</string>
    <string name="your_name">Your Name</string>
    <string name="let_us_know_your_experience_using_the_app">Let us know your experience \n using the app.</string>
    <string name="we_would_like_to_hear_your_suggestions">We would like to hear your suggestions....</string>
    <string name="your_rating">Your Rating:</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="your_orders">Your Orders</string>
    <string name="complete">complete</string>
    <string name="_25_03_2022">25/03/2022</string>
    <string name="pedicure">Pedicure</string>
    <string name="sub_category">Sub-Category:</string>
    <string name="parlour_services">Parlour Services</string>
    <string name="category">Category:</string>
    <string name="tony_stark">Tony stark</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_log_in_to_your_account">Please Log In to your account</string>
    <string name="user">User</string>
    <string name="professional">Professional</string>
    <string name="enter_registered_mobile_no">Enter Registered Mobile No. *</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_new_account">Register new account</string>
    <string name="please_sign_up_to_your_account">Please Sign Up to your account</string>
    <string name="username1">Username *</string>
    <string name="confirm_password1">Confirm Password *</string>
    <string name="password3">Password *</string>
    <string name="address_line_1_1">Address line 1 *</string>
    <string name="address_line_2_2">Address line 2 *</string>
    <string name="city1">City *</string>
    <string name="pincode1">Pincode *</string>
    <string name="state1">State *</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number_dialog">Mobile Number</string>
    <string name="please_enter_your_mobile_number_for_verification">Please enter your mobile number for Verification</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="next">Next 👉</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_your_new_password">Please enter your New Password</string>
    <string name="confirm_password_dialog">Confirm Password</string>
    <string name="confirm_password_dialog1">Confirm Password</string>
    <string name="submit_dialog">Submit</string>
    <string name="categories_list">Categories List</string>
    <string name="description">Description</string>
    <string name="description_of_the_professional_services_needed">Description of the Professional Services Needed....</string>
    <string name="select_radius">Select Radius</string>
    <string name="select_rating">Select Rating</string>
    <string name="professionals_list">Professionals List</string>
    <string name="_4_5">4.5</string>
    <string name="interested_in_service">Interested in Service</string>
    <string name="chat">Chat</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="jason_miles">Jason Miles</string>
    <string name="_2_5_km">2.5 km</string>
    <string name="enter_the_otp_sent_to_91_9768427098">Enter the OTP sent to +91 9768427098</string>
    <string name="_1235">1235</string>
    <string name="todo11">TODO</string>
    <string name="todo111">TODO</string>
</resources>