<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/order_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="26dp"
    android:layout_marginVertical="7.5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="18dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/order_cards_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/image2"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName_order_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spartan_semi_bold"
                android:text="@string/tony_stark"
                android:textColor="#434343"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:fontFamily="@font/spartan_medium"
                    android:textColor="#696974"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/mainCategory_order_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/spartan_medium"
                    android:text="@string/parlour_services"
                    android:textColor="#696974"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_category"
                    android:textColor="#696974"
                    android:fontFamily="@font/spartan_medium"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/subCategory_order_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pedicure"
                    android:textColor="#696974"
                    android:fontFamily="@font/spartan_medium"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:src="@drawable/date"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/date_order_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/spartan_medium"
                    android:text="@string/_25_03_2022"
                    android:textColor="#696974"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/state_order_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:fontFamily="@font/spartan_semi_bold"
                    android:letterSpacing="0.1"
                    android:text="@string/complete"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>